Fixed events on mobile

--- a/css/board.css
+++ b/css/board.css
@@ -260,6 +260,7 @@ box-sizing: border-box;
     align-items: center;
     font-size: 10px;
     gap: 20px;
+    overflow: hidden;
 }
 
 .event-flex span {
@@ -289,10 +290,10 @@ box-sizing: border-box;
 @media (max-width:666px) {
     .th-1 {
         height: auto!important;
-    gap: 0;
 }
     .main-board {
         flex-wrap: wrap!important;
+        height:auto!important;
     }
 
     .main-left {
@@ -310,8 +311,9 @@ box-sizing: border-box;
     }
 
     .th-eventos {
-        margin-top: 435px!important;
         padding: 0!important;
+        height: auto!important;
+        display: block!important;
     }
 
     .th-event {
@@ -320,7 +322,19 @@ box-sizing: border-box;
 
     .event-flex {
         border-left: 0!important;
-        padding-left: 0!important;
         text-align: center!important;
+        max-width: 100%;
+        width: 100%;
+        margin: 0!important;
+        flex-wrap: wrap;
+        height: auto!important;
+        padding: 10px!important;
+    }
+
+    .event-flex span {
+    align-items: center!important;
+    max-width: 46%!important;
+    flex: 1 0 40%!important;
+    height: 50px!important;
     }
 }
